# xgc2-camera-calibration-ros1

./: README.md
.github/workflows/: ci.yml  release.yml
.xgc2/: product.yml
.xgc2/scripts/: build_debs_in_docker.sh  check_installed_packages.sh  check_package_compliance.sh  package_debs.sh
process-definitions/: xgc2-camera-calibration-ros1.json
xgc_camera_calibration/: CMakeLists.txt  package.xml
xgc_camera_calibration/launch/: extrinsic_calibrator.launch  extrinsic_tf.launch
xgc_camera_calibration/scripts/: extrinsic_calibrator_web.py  extrinsic_tf_publisher.py  intrinsic_calibrator_web.py
xgc_camera_calibration/src/xgc_camera_calibration/: extrinsic_file_watcher.py  intrinsic_service.py  media_snapshot.py  solver.py  web_service.py
xgc_camera_calibration/test/: test_extrinsic_file_watcher.py  test_intrinsic_service.py  test_solver.py  test_web_service.py
xgc_camera_calibration/web/extrinsic/: app.js  index.html
xgc_camera_calibration/web/intrinsic/: app.js  index.html
