<?xml version="1.0"?>
<package format="2">
  <name>xgc_camera_calibration</name>
  <version>0.3.0</version>
  <description>Independent intrinsic and fixed-world-camera extrinsic calibration tools.</description>
  <maintainer email="maintainers@xgc2.example">XGC2</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python3-setuptools</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rosbash</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>python3-nose</test_depend>

  <export />
</package>
